src/objects/Guest_Card__c.object
<CustomObject>
    <fields>
        <fullName>AVB_Account_ID__c</fullName>
        <formula>IF(ISPICKVAL(SHARED__c, &quot;No&quot;),  Prospect_Account__r.Account_ID__c , &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AVB Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVB_Associate__c</fullName>
        <label>AVB Associate</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_City__c</fullName>
        <label>Address City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Postal_Code__c</fullName>
        <label>Address Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_State__c</fullName>
        <label>Address State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_Street_1__c</fullName>
        <label>Address Street 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Street_2__c</fullName>
        <label>Address Street 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgeInDays__c</fullName>
        <formula>NOW() -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age in days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgeInMinutes__c</fullName>
        <formula>(NOW() -  CreatedDate)*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age in minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bath__c</fullName>
        <label>Bath</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bed__c</fullName>
        <label>Bed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Class_ID__c</fullName>
        <label>Desired Unit Type</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CommunityBrand__c</fullName>
        <formula>Text(Community__r.CommunityBrand__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityEmail__c</fullName>
        <formula>Community__r.CommunityEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityPhone__c</fullName>
        <formula>&quot;(&quot; + mid(Community__r.CommunityPhone__c, 1, 3) + &quot;) &quot; + mid(Community__r.CommunityPhone__c, 4, 3) + &quot;-&quot; + mid(Community__r.CommunityPhone__c, 7, 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Guest Cards (Community)</relationshipLabel>
        <relationshipName>Guest_Cards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Info_has_been_edited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Info has been edited?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Guest Cards</relationshipLabel>
        <relationshipName>Guest_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Active__c</fullName>
        <formula>TODAY() - datevalue(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Guest_Card_Details__c</fullName>
        <label>Guest Card Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Have_a_pet_other_than_a_service_animal__c</fullName>
        <label>Have a pet other than a service animal?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>How_Many_Occupants__c</fullName>
        <label>How many people will occupy the home?</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Affordable Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AptFndr/AptMag PRINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apt Guide/ASG PRINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apt Showcase PRINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AvalonCommMobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVB Company Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVB SisterCommRefer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail/Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For Rent Mag PRINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-4Walls.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-Apartments.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-AptFinder.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-AptGuide.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-AptMarketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-AptSearch.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-AptShowcase.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-Craigslist.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-ForRent.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-Hotpads.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-Internet Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-Local Searches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-Move.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-MyNewPlace.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-Oodle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-Rent.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-RentJungle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inactivated_in_MRI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactivated in MRI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_Reason__c</fullName>
        <label>Inactive Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Additonal Deposit/Guarantor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apt Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conviction of Felony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment still pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Status Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Response/Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Moving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Objected to Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Objection to Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Objection to Floorplan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Object to Smoke-Free Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Rental Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping for Friend or Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Home to Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Inactivated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InitialVisitAge__c</fullName>
        <formula>floor(now() - Initial_Visit_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Visit Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Lead_Type__c</fullName>
        <label>Initial Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Visit_Date__c</fullName>
        <label>Initial Visit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Visit_Number__c</fullName>
        <formula>IF(
  ISBLANK(Initial_Visit_Date__c),
  0,
  1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Visit Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Date__c</fullName>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Date__c</fullName>
        <label>Lease Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_term_desired__c</fullName>
        <label>Lease term desired?</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Leased_Number__c</fullName>
        <formula>IF(
  ISPICKVAL(Status__c, &apos;Leased&apos;),
  1,
  0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leased Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_One_Appointment_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appointment Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MRI_Leasing_Associate_ID__c</fullName>
        <formula>if( MRI_Leasing_Associate__c = &quot;&quot;, &quot;sflead&quot;,  MRI_Leasing_Associate__r.LeasingAssociateID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MRI Leasing Associate ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRI_Leasing_Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MRI Leasing Associate</label>
        <referenceTo>MRILeasingAssociate__c</referenceTo>
        <relationshipLabel>Guest Cards</relationshipLabel>
        <relationshipName>Guest_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Needs_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_communities_being_considered__c</fullName>
        <label>Other communities being considered?</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_resident_email_s__c</fullName>
        <label>Other resident email(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_resident_phone__c</fullName>
        <label>Other resident phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_residents__c</fullName>
        <label>Other resident name(s)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pet_Type_Breed__c</fullName>
        <label>Pet Type &amp; Breed</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Range_Desired__c</fullName>
        <label>Price Range Desired</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <label>Primary Contact</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospect Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Guest Cards</relationshipLabel>
        <relationshipName>Guest_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prospect_Status__c</fullName>
        <formula>TEXT(Prospect_Account__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>If (Class ID=Community Target Class ID) AND (Expected Move in Date &lt;15 days away)=Hot;  Expected Move In Date&lt;30Days away=Warm;  else=Future</description>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_relocating__c</fullName>
        <label>Reason for relocating?</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate/ Seasonal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Status/ Roommate Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home/Condo Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renovation/ Insurance Claim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unhappy with Community</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReturnVisitDate__c</fullName>
        <label>Return Visit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SHARED__c</fullName>
        <label>SHARED</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - enter into MRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Marketing_Source__c</fullName>
        <label>Secondary Marketing Source</label>
        <picklist>
            <picklistValues>
                <fullName>affordable program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>apt guide/asg (print)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>avaloncommmobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>avb company website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>banners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>corporate apt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>direct mail/brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>email blast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>for rent mag (print)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>int-apartments.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>int-apt marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>int-apt finder.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>int-aptguide.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>int-craigslist.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>int-forrent.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>int- local searches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>int-move.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>int-mynewplace.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>int-rent.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>leasing off signage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>locator service/broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>media/billboard ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>outreach/emp call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>resident referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>retail/wndw graphic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>same comm transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>walk-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment Showcase (print)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment Finder/Apartment Magazine (print)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stale__c</fullName>
        <formula>IF(((ISPICKVAL(Status__c, &quot;Active&quot;) || ISPICKVAL(Status__c, &quot;Waitlist&quot;)) &amp;&amp; (When_will_you_be_moving_in__c  &lt; TODAY())), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Manually set to Active, Inactive or Wait list.  Leased will be set for you automatically</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leased</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TestEmail__c</fullName>
        <formula>&quot;cjcindc@gmail.com&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitAgeInDays__c</fullName>
        <formula>NOW()- Initial_Visit_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Age in days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_features_are_most_important__c</fullName>
        <label>What features are most important?</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_most_important_to_you__c</fullName>
        <label>What is most important to you?</label>
        <picklist>
            <picklistValues>
                <fullName>Move In Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>When_will_you_be_moving_in__c</fullName>
        <label>When will you be moving in?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Where_else_did_you_lease__c</fullName>
        <label>Where else did you lease?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone_2__c</fullName>
        <label>Work Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>action__c</fullName>
        <formula>if(hasAccount__c = &quot;true&quot;, 
if(Inactivated_in_MRI__c, 
&quot;inactivated&quot;, 
if(isValidGuestCard__c = &quot;true&quot;, if(inactivate__c = &quot;true&quot;, if(existsInMRI__c = &quot;true&quot;, &quot;inactivate&quot;, &quot;insert&quot;), if(isValidUser__c = &quot;true&quot;, if(existsInMRI__c = &quot;true&quot;, &quot;update&quot;, &quot;insert&quot;), &quot;updated&quot;)), &quot;unintegrated&quot;)), 
&quot;invalid&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>existsInMRI__c</fullName>
        <formula>if(Prospect_Account__r.Exists_in_MRI__c, &quot;true&quot;, &quot;false&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>existsInMRI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasAccount__c</fullName>
        <formula>if( Prospect_Account__c = &quot;&quot;,&quot;false&quot;,&quot;true&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>hasAccount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasContact__c</fullName>
        <formula>if(Contact__c != &quot;&quot;, &quot;true&quot;, &quot;false&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>hasContact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasVisitDate__c</fullName>
        <formula>if( ISBLANK( Initial_Visit_Date__c), &quot;false&quot;, &quot;true&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>hasVisitDate</label>
        <type>Text</type>
    </fields>
</CustomObject>